k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    <>: <>
  name: <>
  namespace: <>
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      <>: <>
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        <>: <>
    spec:
      containers:
      - image: dirceusilva/app-exemplo-prometheus:latest
        imagePullPolicy: Always
        name: <>
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
