k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <>
  namespace: <>
spec:
  rules:
  - host: <>
    http:
      paths:
      - backend:
          serviceName: <>
          servicePort: 5000
        pathType: ImplementationSpecific
